src/test/ui/traits/inductive-overflow/supertrait-auto-trait.stderr
error[E0568]: auto traits cannot have super traits
  --> $DIR/supertrait-auto-trait.rs:8:19
   |
LL | auto trait Magic: Copy {}
   |            -----  ^^^^ help: remove the super traits
   |            |
   |            auto trait cannot have super traits

error[E0277]: the trait bound `NoClone: Copy` is not satisfied
  --> $DIR/supertrait-auto-trait.rs:16:23
   |
LL |     let (a, b) = copy(NoClone);
   |                  ---- ^^^^^^^ the trait `Copy` is not implemented for `NoClone`
   |                  |
   |                  required by a bound introduced by this call
   |
   = note: required because of the requirements on the impl of `Magic` for `NoClone`
note: required by a bound in `copy`
  --> $DIR/supertrait-auto-trait.rs:10:12
   |
LL | fn copy<T: Magic>(x: T) -> (T, T) { (x, x) }
   |            ^^^^^ required by this bound in `copy`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0568.
For more information about an error, try `rustc --explain E0277`.
